2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-posix.m4: Add m4-quotes.
	Require RTEMS_CANONICAL_TARGET_CPU instead of RTEMS_CHECK_CPU.
	* aclocal/canonical-host.m4: Remove.
	* configure.ac: Remove RTEMS_CANONICAL_HOST.
	* aclocal/sysv-ipc.m4: Remove reference to RTEMS_CANONICAL_HOST.
	* aclocal/canonical-target-name.m4: Use AC_CANONICAL_HOST instead of
	AC_CANONICAL_TARGET. Use $host instead of $target.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-multiprocessing.m4: Add m4-quotes.
	Remove RTEMS_CHECK_CPU.
	* aclocal/check-itron.m4: Add m4-quotes.
	Require RTEMS_CANONICAL_TARGET_CPU instead of RTEMS_CHECK_CPU.
	* aclocal/check-networking.m4: Add m4-quotes.
	Require RTEMS_CANONICAL_TARGET_CPU instead of RTEMS_CHECK_CPU.
	* aclocal/check-cpu.m4: Remove.
	* aclocal/canonical-target-name.m4: Add m4-quotes.
	* configure.ac: Merge-in former aclocal/check-cpu.m4.

2003-10-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Check for sys/cdefs.h.
	* aclocal/env-rtems-cpu.m4: Add project_includedir.
	Deprecate PROJECT_INCLUDE.  Change project_includedir to
	$(PROJECT_ROOT)/include for multilibs.

2003-09-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect having removed include/Makefile.am and
	librpc/include/Makefile.am.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/bspIo.h, include/rtems/fs.h, include/rtems/userenv.h:
	URL for license changed.

2003-08-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-top.m4: Add RTEMS_API.
	AC_DEFAULT_PREFIX([/opt/rtems-][RTEMS_API]).

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-debug.m4: Remove.
	* aclocal/enable-rtems-debug.m4: New (Split out from rtems-debug.m4).
	* aclocal/check-rtems-debug.m4: New (Split out from rtems-debug.m4).

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/local.am: Remove "debug".
