@@ -9,8 +9,7 @@ dnl Therefore autoconf's AC_CANONICAL_TARGET will fail for them
 dnl and we have to fix it for rtems ourselves 
 
 AC_DEFUN([RTEMS_CANONICAL_TARGET_CPU],
-[
-AC_CANONICAL_HOST
+[AC_REQUIRE([AC_CANONICAL_HOST])
 AC_MSG_CHECKING(rtems target cpu)
 case "${host}" in
   # hpux unix port should go here
